; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-openflow-1.0.c_of10_vendor_action_print.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-openflow-1.0.c_of10_vendor_action_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [21 x i8] c", vendor 0x%08x (%s)\00", align 1
@OUI_BSN = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@istr = common dso_local global i32 0, align 4
@tstr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i32*, i32)* @of10_vendor_action_print to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @of10_vendor_action_print(i32* %0, i32* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i32* (i32*, i32*, i32*, i32)*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load i32, i32* %9, align 4
  %13 = icmp slt i32 %12, 4
  br i1 %13, label %14, label %15

14:                                               ; preds = %4
  br label %42

15:                                               ; preds = %4
  %16 = load i32*, i32** %7, align 8
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @ND_TCHECK2(i32 %17, i32 4)
  %19 = load i32*, i32** %7, align 8
  %20 = call i64 @EXTRACT_32BITS(i32* %19)
  store i64 %20, i64* %10, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 4
  store i32* %22, i32** %7, align 8
  %23 = load i32*, i32** %6, align 8
  %24 = load i64, i64* %10, align 8
  %25 = load i64, i64* %10, align 8
  %26 = call i32 @of_vendor_name(i64 %25)
  %27 = sext i32 %26 to i64
  %28 = inttoptr i64 %27 to i32*
  %29 = call i32 @ND_PRINT(i32* %28)
  %30 = load i64, i64* %10, align 8
  %31 = load i64, i64* @OUI_BSN, align 8
  %32 = icmp eq i64 %30, %31
  %33 = zext i1 %32 to i64
  %34 = select i1 %32, i32* (i32*, i32*, i32*, i32)* @of10_bsn_actions_print, i32* (i32*, i32*, i32*, i32)* @of10_data_print
  store i32* (i32*, i32*, i32*, i32)* %34, i32* (i32*, i32*, i32*, i32)** %11, align 8
  %35 = load i32* (i32*, i32*, i32*, i32)*, i32* (i32*, i32*, i32*, i32)** %11, align 8
  %36 = load i32*, i32** %6, align 8
  %37 = load i32*, i32** %7, align 8
  %38 = load i32*, i32** %8, align 8
  %39 = load i32, i32* %9, align 4
  %40 = sub nsw i32 %39, 4
  %41 = call i32* %35(i32* %36, i32* %37, i32* %38, i32 %40)
  store i32* %41, i32** %5, align 8
  br label %63

42:                                               ; preds = %14
  %43 = load i32*, i32** %6, align 8
  %44 = load i32, i32* @istr, align 4
  %45 = sext i32 %44 to i64
  %46 = inttoptr i64 %45 to i32*
  %47 = call i32 @ND_PRINT(i32* %46)
  %48 = load i32*, i32** %7, align 8
  %49 = load i32, i32* %48, align 4
  %50 = load i32, i32* %9, align 4
  %51 = call i32 @ND_TCHECK2(i32 %49, i32 %50)
  %52 = load i32*, i32** %7, align 8
  %53 = load i32, i32* %9, align 4
  %54 = sext i32 %53 to i64
  %55 = getelementptr inbounds i32, i32* %52, i64 %54
  store i32* %55, i32** %5, align 8
  br label %63

56:                                               ; No predecessors!
  %57 = load i32*, i32** %6, align 8
  %58 = load i32, i32* @tstr, align 4
  %59 = sext i32 %58 to i64
  %60 = inttoptr i64 %59 to i32*
  %61 = call i32 @ND_PRINT(i32* %60)
  %62 = load i32*, i32** %8, align 8
  store i32* %62, i32** %5, align 8
  br label %63

63:                                               ; preds = %56, %42, %15
  %64 = load i32*, i32** %5, align 8
  ret i32* %64
}

declare dso_local i32 @ND_TCHECK2(i32, i32) #1

declare dso_local i64 @EXTRACT_32BITS(i32*) #1

declare dso_local i32 @ND_PRINT(i32*) #1

declare dso_local i32 @of_vendor_name(i64) #1

declare dso_local i32* @of10_bsn_actions_print(i32*, i32*, i32*, i32) #1

declare dso_local i32* @of10_data_print(i32*, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
